--- a/indi_allsky/flask/templates/watch_video.html
+++ b/indi_allsky/flask/templates/watch_video.html
@@ -16,7 +16,7 @@ var file_view = "{{ file_view }}";
 {% endblock %}
 
 {% block content %}
-<h3>{{ timeofday}} - {{ dayDate_full }}</h3>
+<h3>{{ dayDate_full }} - {{ timeofday}}</h3>
 
 <hr>
 
@@ -43,7 +43,7 @@ function init() {
         $('<button />', {
             'class' : "badge pill bg-primary copy-clipboard",
             'data-clipboard-text' : "{{ url_for(file_view, _external=True) }}?camera=" + camera_id + "&night=" + Number(night) + "&date=" + dayDate,
-        }).text('Copy Permalink to Clipboard')
+        }).text('Copy Link to Clipboard')
     );
     $('#download').html(
         $('<a />', {
