display errors on exceptions

--- a/indi_allsky/flask/templates/view_image.html
+++ b/indi_allsky/flask/templates/view_image.html
@@ -15,7 +15,7 @@ var file_view = "{{ file_view }}";
 {% endblock %}
 
 {% block content %}
-<h3>{{ createDate_full }}</h3>
+<h3>{{ createDate_full }} - {{ timeofday }}</h3>
 
 <hr>
 
