--- a/indi_allsky/flask/templates/videoviewer.html
+++ b/indi_allsky/flask/templates/videoviewer.html
@@ -176,7 +176,7 @@ function populate_videos(video_list) {
 
             // Link to keogram image
             var kl_a = $('<a />', {
-                'href'   : "{{ url_for('indi_allsky.keogram_image_view')}}?camera={{ camera_id }}&id=" + item['keogram_id'],
+                'href'   : "{{ url_for('indi_allsky.keogram_image_view')}}?id=" + item['keogram_id'],
                 'target' : "_blank",
                 'rel'    : "noopener noreferrer",
                 'class'  : "text-decoration-none link-warning",
@@ -192,7 +192,7 @@ function populate_videos(video_list) {
             // Link to star trail image
             if (item['startrail'] != 'None') {
                 var st_a = $('<a />', {
-                    'href'   : "{{ url_for('indi_allsky.startrail_image_view')}}?camera={{ camera_id }}&id=" + item['startrail_id'],
+                    'href'   : "{{ url_for('indi_allsky.startrail_image_view')}}?id=" + item['startrail_id'],
                     'target' : "_blank",
                     'rel'    : "noopener noreferrer",
                     'class'  : "text-decoration-none link-warning",
@@ -210,7 +210,7 @@ function populate_videos(video_list) {
             // Link to panorama timelapse
             if (item['panorama_timelapse'] != 'None') {
                 var p_a = $('<a />', {
-                    'href'   : "{{ url_for('indi_allsky.panorama_video_view')}}?camera={{ camera_id }}&id=" + item['panorama_timelapse_id'],
+                    'href'   : "{{ url_for('indi_allsky.panorama_video_view')}}?id=" + item['panorama_timelapse_id'],
                     'target' : "_blank",
                     'rel'    : "noopener noreferrer",
                     'class'  : "text-decoration-none link-warning",
@@ -257,7 +257,7 @@ function populate_videos(video_list) {
 
             // Link to keogram image
             var kl_a = $('<a />', {
-                'href'   : "{{ url_for('indi_allsky.keogram_image_view')}}?camera={{ camera_id }}&id=" + item['keogram_id'],
+                'href'   : "{{ url_for('indi_allsky.keogram_image_view')}}?id=" + item['keogram_id'],
                 'target' : "_blank",
                 'rel'    : "noopener noreferrer",
                 'class'  : "text-decoration-none link-warning",
@@ -273,7 +273,7 @@ function populate_videos(video_list) {
             // Link to panorama timelapse
             if (item['panorama_timelapse'] != 'None') {
                 var p_a = $('<a />', {
-                    'href'   : "{{ url_for('indi_allsky.panorama_video_view')}}?camera={{ camera_id }}&id=" + item['panorama_timelapse_id'],
+                    'href'   : "{{ url_for('indi_allsky.panorama_video_view')}}?id=" + item['panorama_timelapse_id'],
                     'target' : "_blank",
                     'rel'    : "noopener noreferrer",
                     'class'  : "text-decoration-none link-warning",
@@ -309,7 +309,7 @@ function populate_videos(video_list) {
                 if (item['startrail_timelapse'] != 'None') {
                     // Link to Star trail timelapse
                     var st_tl_a = $('<a />', {
-                        'href'   : "{{ url_for('indi_allsky.startrail_video_view')}}?camera={{ camera_id }}&id=" + item['startrail_timelapse_id'],
+                        'href'   : "{{ url_for('indi_allsky.startrail_video_view')}}?id=" + item['startrail_timelapse_id'],
                         'target' : "_blank",
                         'rel'    : "noopener noreferrer",
                     }).appendTo(startrail_div);
@@ -382,7 +382,7 @@ function populate_videos(video_list) {
 
 
         var k_a = $('<a />', {
-            'href'   : "{{ url_for('indi_allsky.timelapse_video_view')}}?camera={{ camera_id }}&id=" + item['id'],
+            'href'   : "{{ url_for('indi_allsky.timelapse_video_view')}}?id=" + item['id'],
             'target' : "_blank",
             'rel'    : "noopener noreferrer",
         }).appendTo(keogram_div);
