--- a/indi_allsky/flask/templates/view_image.html
+++ b/indi_allsky/flask/templates/view_image.html
@@ -133,6 +133,7 @@ function init() {
         $('<a />', {
             'href' : "{{ image_url }}",
             'rel' : "noopener noreferrer",
+            'download' : '',
         }).html(
             $('<span />', {
                 'text'  : 'Download',
