--- a/indi_allsky/flask/templates/watch_video.html
+++ b/indi_allsky/flask/templates/watch_video.html
@@ -48,6 +48,7 @@ function init() {
         $('<a />', {
             'href' : "{{ video_url }}",
             'rel' : "noopener noreferrer",
+            'download' : '',
         }).html(
             $('<span />', {
                 'text'  : 'Download',
