--- a/indi_allsky/flask/templates/watch_video.html
+++ b/indi_allsky/flask/templates/watch_video.html
@@ -8,7 +8,7 @@
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/clipboard.min.js') }}"></script>
 <script type="text/javascript">
-var video_id = video_id;
+var video_id = {{ video_id }};
 var dayDate = "{{ dayDate }}";
 var file_view = "{{ file_view }}";
 </script>
