--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -90,6 +90,11 @@ var sd = {
         'h' : 976,
         'p' : 3.75,
     },
+    'imx185' : {
+        'w' : 1944,
+        'h' : 1224,
+        'p' : 3.75,
+    },
     'imx385' : {
         'w' : 1936,
         'h' : 1096,
@@ -124,6 +129,11 @@ var sd = {
         'w' : 1280,
         'h' : 960,
         'p' : 3.75,
+    },
+    'mt9t001' : {
+        'w' : 2048,
+        'h' : 1536,
+        'p' : 3.2,
     },
     'imx571' : {
         'w' : 6248,
@@ -215,15 +225,45 @@ var sd = {
         'h' : 1200,
         'p' : 3,
     },
-    'icx825' : {
+    'icx825al' : {
         'w' : 1392,
         'h' : 1040,
         'p' : 6.45,
     },
-    'icx205' : {
+    'icx205al' : {
         'w' : 1392,
         'h' : 1040,
         'p' : 4.65,
+    },
+    'imx327' : {
+        'w' : 1920,
+        'h' : 1080,
+        'p' : 2.9,
+    },
+    'imx269' : {
+        'w' : 5280,
+        'h' : 3956,
+        'p' : 3.3,
+    },
+    'imx410' : {
+        'w' : 6072,
+        'h' : 4042,
+        'p' : 5.94,
+    },
+    'icx274al' : {
+        'w' : 1628,
+        'h' : 1236,
+        'p' : 4.4,
+    },
+    'imx273' : {
+        'w' : 1456,
+        'h' : 1088,
+        'p' : 3.45,
+    },
+    'imx252' : {
+        'w' : 2064,
+        'h' : 1544,
+        'p' : 3.45,
     },
 };
 </script>
