more cameras for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -265,6 +265,31 @@ var sd = {
         'h' : 1544,
         'p' : 3.45,
     },
+    'imx250' : {
+        'w' : 2464,
+        'h' : 2056,
+        'p' : 3.45,
+    },
+    'imx265' : {
+        'w' : 2064,
+        'h' : 1544,
+        'p' : 3.45,
+    },
+    'imx264' : {
+        'w' : 2464,
+        'h' : 2056,
+        'p' : 3.45,
+    },
+    'imx304' : {
+        'w' : 4112,
+        'h' : 3008,
+        'p' : 3.45,
+    },
+    'imx253' : {
+        'w' : 4112,
+        'h' : 3008,
+        'p' : 3.45,
+    },
 };
 </script>
 {% endblock %}
