--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -26,6 +26,7 @@ var icd = {
     'm12_f2.0_1.8mm_1-2.5' :        6.9,
     'm12_f2.0_2.1mm_1-2.7' :        6.7,
     'meike_f2.8_3.5mm_4-3' :        12.5,
+    'custom_f7_5.8mm_m42' :         17.3,
 }
 
 // sensor dimensions
