separate imx415 and sv205

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -202,6 +202,11 @@ var sd = {
         'p' : 2.9,
     },
     'imx415' : {
+        'w' : 3864,
+        'h' : 2160,
+        'p' : 1.45,
+    },
+    'imx415_sv205' : {  // resolution is different vs regular imx415
         'w' : 3264,
         'h' : 2160,
         'p' : 1.45,
