--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2103,6 +2103,28 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.KEOGRAM_CROP_TOP.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.KEOGRAM_CROP_TOP(class='form-control bg-secondary') }}
+            <div id="KEOGRAM_CROP_TOP-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Percent to trim from top of Keogram.  Use this to crop text or trees from the keogram.</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.KEOGRAM_CROP_BOTTOM.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.KEOGRAM_CROP_BOTTOM(class='form-control bg-secondary') }}
+            <div id="KEOGRAM_CROP_BOTTOM-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Percent to trim from bottom of Keogram.</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.KEOGRAM_LABEL.label }}
         </div>
         <div class="col-sm-2">
@@ -3952,6 +3974,8 @@ const field_names = [
     'KEOGRAM_ANGLE',
     'KEOGRAM_H_SCALE',
     'KEOGRAM_V_SCALE',
+    'KEOGRAM_CROP_TOP',
+    'KEOGRAM_CROP_BOTTOM',
     'STARTRAILS_MAX_ADU',
     'STARTRAILS_MASK_THOLD',
     'STARTRAILS_PIXEL_THOLD',
