--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -226,6 +226,12 @@
 
 <div class="row">
     <div class="col-sm-2"></div>
+    <div class="col-sm-1">cryptography</div>
+    <div class="col-sm-1">{{cryptography_version}}</div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
     <div class="col-sm-1">pyindi</div>
     <div class="col-sm-1">{{pyindi_version}}</div>
 </div>
