add tool tip for rock setting

--- a/indi_allsky/flask/templates/loop.html
+++ b/indi_allsky/flask/templates/loop.html
@@ -222,7 +222,9 @@ $( document ).ready(function() {
             {{ form_history.ROCK_CHECKBOX.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
+            <span data-bs-toggle="tooltip" data-bs-placement="right" title="Rocks the images from newest to oldest to newest">
             {{ form_history.ROCK_CHECKBOX(class='form-check-input bg-secondary') }}
+            </span>
         </div>
     </div>
 </form>
