--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1595,6 +1595,7 @@
             </div>
         </div>
         <div class="col-sm-8">
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Reversing the direction also flips the orbs position horizontally</div>
         </div>
     </div>
 
