--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -609,6 +609,21 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.IMAGE_CALIBRATE_DARK.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_CALIBRATE_DARK(class='form-check-input') }}
+                <div id="IMAGE_CALIBRATE_DARK-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.DAYTIME_CONTRAST_ENHANCE.label }}
         </div>
         <div class="col-sm-2">
@@ -1684,6 +1699,19 @@
             </div>
         </div>
         <div class="col-sm-8">Enable saving raw FITS (non-stacked) data</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_FITS_PRE_DARK.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_FITS_PRE_DARK(class='form-check-input') }}
+                <div id="IMAGE_FITS_PRE_DARK-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Save FITS files before subtracting dark calibration</div>
     </div>
 
     <div class="form-group row">
@@ -4216,6 +4244,8 @@ const checkbox_field_names = [
     'IMAGE_SAVE_FITS',
     'IMAGE_STACK_ALIGN',
     'IMAGE_STACK_SPLIT',
+    'IMAGE_CALIBRATE_DARK',
+    'IMAGE_FITS_PRE_DARK',
     'THUMBNAILS__IMAGES_AUTO',
     'NIGHT_GRAYSCALE',
     'DAYTIME_GRAYSCALE',
