--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -116,6 +116,23 @@ var fullscreen = false;  //initial state
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_CALIBRATE_DARK.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_image_processing.IMAGE_CALIBRATE_DARK(class='form-check-input') }}
+                <div id="IMAGE_CALIBRATE_DARK-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Do not enable unless you know what you are doing.  Dark frame calibration is almost always already complete.</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_image_processing.CCD_BIT_DEPTH.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -714,6 +731,7 @@ const field_names = [
 
 const checkbox_field_names = [
     'DISABLE_PROCESSING',
+    'IMAGE_CALIBRATE_DARK',
     'NIGHT_CONTRAST_ENHANCE',
     'CONTRAST_ENHANCE_16BIT',
     'IMAGE_STRETCH__MODE1_ENABLE',
