adjust camera measurement

--- a/indi_allsky/flask/templates/cameraLens.html
+++ b/indi_allsky/flask/templates/cameraLens.html
@@ -117,8 +117,8 @@
     </div>
 
     <div class="row">
-        <div class="col-2">Arcsec&sup2;/&micro;m&sup2;</div>
-        <div class="col-4">{{ "%0.2f"|format(arcsec_um * arcsec_um | float) }}</div>
+        <div class="col-2">Deg&sup2;/px</div>
+        <div class="col-4">{{ "%0.5f"|format(deg2_px | float) }}</div>
     </div>
 
     <hr>
