include config note

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -617,7 +617,7 @@
                 <div id="IMAGE_CALIBRATE_DARK-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">Disable if you want to include hot pixels your final image</div>
     </div>
 
     <hr>
