new camera for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -151,6 +151,11 @@ var sd = {
         'h' : 2080,
         'p' : 2.4,
     },
+    'imx676' : {
+        'w' : 3552,
+        'h' : 3552,
+        'p' : 2,
+    },
     'imx678' : {
         'w' : 3840,
         'h' : 2160,
