new cameras for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -29,6 +29,9 @@ var icd = {
     'custom_f7_5.8mm_m42' :         17.3,
 }
 
+//   '64mphawkeye_f1.8_5.1mm_1-1.7' : 0.0,
+//   '64mpowlsight_f1.9_6.65mm_1-1.32' : 0.0,
+
 // sensor dimensions
 var sd = {
     'imx477' : {
@@ -300,6 +303,21 @@ var sd = {
         'w' : 4112,
         'h' : 3008,
         'p' : 3.45,
+    },
+    'imx682' : {
+        'w' : 9152,
+        'h' : 6944,
+        'p' : 0.8,
+    },
+    'ov64a40' : {
+        'w' : 9152,
+        'h' : 6944,
+        'p' : 1.008,
+    },
+    'imx283' : {
+        'w' : 5496,
+        'h' : 3694,
+        'p' : 2.4,
     },
 };
 </script>
