add imx298 to simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -319,6 +319,11 @@ var sd = {
         'h' : 3694,
         'p' : 2.4,
     },
+    'imx298' : {
+        'w' : 4640,
+        'h' : 3472,
+        'p' : 1.12,
+    },
 };
 </script>
 {% endblock %}
