set better default rotation for panorama

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2411,6 +2411,8 @@
         </div>
         <div class="col-sm-8">
             <div>Min: -180, Max: 180 - Image rotation for panorama</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> The starting point of the panorama is 90 degrees clockwise</div>
+            <div>-90 will make the bottom of the image the center of the panorama</div>
         </div>
     </div>
 
